fix: remove z-index in menu and drawer

--- a/webapp/IronCalc/src/components/Select/dropdown-menu.css
+++ b/webapp/IronCalc/src/components/Select/dropdown-menu.css
@@ -1,7 +1,6 @@
 /* Dropdown menu */
 .ic-dropdown-menu-wrapper {
   position: fixed;
-  z-index: 9999;
   font-family: var(--typography-font-family);
   font-size: var(--typography-font-size);
 }
@@ -35,6 +34,7 @@
   text-align: left;
   cursor: pointer;
   outline: none;
+  white-space: nowrap;
 }
 
 .ic-dropdown-menu-option:hover,
